--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,4 @@ proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.
 
 # Project target.
 target=android-18
-android.library.reference.1=../../../android/Widgets/Widgets
+android.library.reference.1=Widgets
