--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tobykurien.batteryfu"
     android:installLocation="auto"
-    android:versionCode="43"
-    android:versionName="1.43" >
+    android:versionCode="44"
+    android:versionName="1.44-beta1" >
 
     <uses-sdk
         android:minSdkVersion="3"
