Move DataToggling logic to a service This might fix problems with data sometimes not being disabled
Signed-off-by: Andreas Böhler <dev@aboehler.at>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -116,6 +116,8 @@
 
         <service android:name=".ScreenService" >
         </service>
+        <service android:name=".DataService">
+        </service>
     </application>
 
 </manifest>
