Update buildTools to versino 20 and gradle to 1.0 for build
Signed-off-by: Andreas Böhler <dev@aboehler.at>

--- a/Widgets/build.gradle
+++ b/Widgets/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.5.+'
+        classpath 'com.android.tools.build:gradle:1.0.0'
     }
 }
 
@@ -11,7 +11,7 @@ apply plugin: 'android-library'
 
 android {
     compileSdkVersion 18
-    buildToolsVersion "19"
+    buildToolsVersion "19.1"
 
     dependencies {
       compile fileTree(dir: 'libs', includes: ['*.jar'])
